Fix small layout issues.

--- a/css/style.css
+++ b/css/style.css
@@ -213,11 +213,11 @@ a:not([href]):not([tabindex]):hover {
 	}
 	
 	.nes-table.is-dark.is-outline.is-session {
-		width: calc(100% - 16px);
+		width: calc(100% - 8px);
 	}
 	
 	.nes-table.is-dark.is-outline.is-gallery {
-		width: calc(100% - 16px);
+		width: calc(100% - 8px);
 	}
 	
 	#map-pc {
